+++++++++++
Python News
+++++++++++

What's New in Python 3.3.2?
===========================

.. *Release date: XXXX-XX-XX*

*Not yet released, see sections below for changes released in 3.3.1*

Core and Builtins
-----------------

- Issue #17669: Fix crash involving finalization of generators using yield from.

- Issue #17619: Make input() check for Ctrl-C correctly on Windows.

- Issue #17610: Don't rely on non-standard behavior of the C qsort() function.

- Issue #17357: Add missing verbosity output when using -v/-vv.

Library
-------

- Issue #13355: Raise ValueError on random.triangular call with invalid params.
  Initial patch by Yuriy Senko.

- Issue #16658: add missing return to HTTPConnection.send()
  Patch by Jeff Knupp.

- Issue #14971: unittest test discovery no longer gets confused when a function
  has a different __name__ than its name in the TestCase class dictionary.

- Issue #17678: Fix DeprecationWarning in the http/cookiejar.py by changing the
  usage of get_origin_req_host() to origin_req_host.

- Issue #17666: Fix reading gzip files with an extra field.

- Issue #17502: Process DEFAULT values in mock side_effect that returns iterator.
  Patch by Michael Foord.

- Issue #17572: Avoid chained exceptions while passing bad directives to
  time.strptime().  Initial patch by Claudiu Popa.

- Issue #17435: threading.Timer's __init__ method no longer uses mutable
  default values for the args and kwargs parameters.

- Issue #17526: fix an IndexError raised while passing code without filename to
  inspect.findsource().  Initial patch by Tyler Doyle.

IDLE
----

- Issue #17585: Fixed IDLE regression. Now closes when using exit() or quit().

- Issue #17657: Show full Tk version in IDLE's about dialog.
  Patch by Todd Rovito.

- Issue #17613: Prevent traceback when removing syntax colorizer in IDLE.

- Issue #1207589: Backwards-compatibility patch for right-click menu in IDLE.

- Issue #16887: IDLE now accepts Cancel in tabify/untabify dialog box.
